Port CFEnv Removal
This change ports the CfEnv removal for the OTel Java Agent extension
where it has been replaced by manual JSON parsing to keep the jar
nice and tiny.

It also ports the Spring Boot Sample application to use the SAP library
to access VCAP_SERVICES.

Signed-off-by: Karsten Schnitter <k.schnitter@sap.com>