@@ -1,7 +1,7 @@
 package com.sap.hcf.cf.logging.opentelemetry.agent.ext.binding;
 
-import io.pivotal.cfenv.core.CfEnv;
-import io.pivotal.cfenv.core.CfService;
+import org.assertj.core.api.AbstractListAssert;
+import org.assertj.core.api.ObjectAssert;
 import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
@@ -13,56 +13,103 @@ import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 public class CloudFoundryServicesAdapterTest {
-    private static final String DEFAULT_VCAP_APPLICATION = "{}";
-    private static final String DEFAULT_VCAP_SERVICES =
-            "{" + "\"managed-find-me-service\":[" + "{\"label\":\"managed-find-me-service\", \"tags\":[\"Find Me!\"],\"name\":\"managed-find-me1\"}," + "{\"label\":\"managed-find-me-service\", \"tags\":[\"Find Me!\"],\"name\":\"managed-find-me2\"}," + "{\"label\":\"managed-find-me-service\", \"tags\":[\"You can't see me!\"],\"name\":\"managed-other\"}" + "]," + "\"managed-notice-me-not-service\":[" + "{\"label\":\"managed-notice-me-not-service\", \"tags\":[\"Find Me!\"],\"name\":\"managed-other1\"}," + "{\"label\":\"managed-notice-me-not-service\", \"tags\":[\"You can't see me!\"],\"name\":\"managed-other2\"}" + "]," + "\"user-provided\":[" + "{\"label\":\"user-provided\", \"tags\":[\"Find Me!\"],\"name\":\"ups-find-me1\"}," + "{\"label\":\"user-provided\", \"tags\":[\"Find Me!\"],\"name\":\"ups-find-me2\"}," + "{\"label\":\"user-provided\", \"tags\":[\"You can't see me!\"],\"name\":\"ups-other\"}" + "]}";
+    private static final String DEFAULT_VCAP_SERVICES = """
+            {
+              "managed-find-me-service": [
+                {
+                  "label": "managed-find-me-service",
+                  "tags": ["Find Me!"],
+                  "name": "managed-find-me1"
+                },
+                {
+                  "label": "managed-find-me-service",
+                  "tags": ["Find Me!"],
+                  "name": "managed-find-me2"
+                },
+                {
+                  "label": "managed-find-me-service",
+                  "tags": ["You can't see me!"],
+                  "name": "managed-other"
+                }
+              ],
+              "managed-notice-me-not-service": [
+                {
+                  "label": "managed-notice-me-not-service",
+                  "tags": ["Find Me!"],
+                  "name": "managed-other1"
+                },
+                {
+                  "label": "managed-notice-me-not-service",
+                  "tags": ["You can't see me!"],
+                  "name": "managed-other2"
+                }
+              ],
+              "user-provided": [
+                {
+                  "label": "user-provided",
+                  "tags": ["Find Me!"],
+                  "name": "ups-find-me1"
+                },
+                {
+                  "label": "user-provided",
+                  "tags": ["Find Me!"],
+                  "name": "ups-find-me2"
+                },
+                {
+                  "label": "user-provided",
+                  "tags": ["You can't see me!"],
+                  "name": "ups-other"
+                }
+              ]
+            }""";
 
-    private static final CfEnv DEFAULT_CF_ENV = new CfEnv(DEFAULT_VCAP_APPLICATION, DEFAULT_VCAP_SERVICES);
-    private static final CloudFoundryServicesAdapter DEFAULT_ADAPTER = new CloudFoundryServicesAdapter(DEFAULT_CF_ENV);
+    private static final CloudFoundryServicesAdapter DEFAULT_ADAPTER =
+            new CloudFoundryServicesAdapter(DEFAULT_VCAP_SERVICES);
 
     @Test
-    public void getsAllServicesWithNullParameters() {
-        List<CfService> services = DEFAULT_ADAPTER.stream(null, null).collect(toList());
+    void getsAllServicesWithNullParameters() {
+        List<CloudFoundryServiceInstance> services = DEFAULT_ADAPTER.stream(null, null).toList();
+        assertServiceNames(services).containsExactly("managed-find-me1", "managed-find-me2", "managed-other",
+                                                     "managed-other1", "managed-other2", "ups-find-me1", "ups-find-me2",
+                                                     "ups-other");
 
-        assertThat(services).extracting(CfService::getName)
-                            .containsExactly("managed-find-me1", "managed-find-me2", "managed-other", "managed-other1",
-                                             "managed-other2", "ups-find-me1", "ups-find-me2", "ups-other");
+    }
+
+    private static AbstractListAssert<?, List<? extends String>, String, ObjectAssert<String>> assertServiceNames(
+            List<CloudFoundryServiceInstance> services) {
+        return assertThat(services).extracting(CloudFoundryServiceInstance::getName);
     }
 
     @Test
-    public void filtersBySingleLabel() {
-        List<CfService> services =
-                DEFAULT_ADAPTER.stream(Collections.singletonList("managed-find-me-service"), emptyList())
-                               .collect(toList());
-        assertThat(services).extracting(CfService::getName)
-                            .containsExactly("managed-find-me1", "managed-find-me2", "managed-other");
+    void filtersBySingleLabel() {
+        List<CloudFoundryServiceInstance> services =
+                DEFAULT_ADAPTER.stream(Collections.singletonList("managed-find-me-service"), emptyList()).toList();
+        assertServiceNames(services).containsExactlyInAnyOrder("managed-find-me1", "managed-find-me2", "managed-other");
     }
 
     @Test
-    public void priotizesByServiceLabel() {
-        List<CfService> services =
-                DEFAULT_ADAPTER.stream(asList("user-provided", "managed-find-me-service"), emptyList())
-                               .collect(toList());
-        assertThat(services).extracting(CfService::getName)
-                            .containsExactly("ups-find-me1", "ups-find-me2", "ups-other", "managed-find-me1",
-                                             "managed-find-me2", "managed-other");
+    void priotizesByServiceLabel() {
+        List<CloudFoundryServiceInstance> services =
+                DEFAULT_ADAPTER.stream(asList("user-provided", "managed-find-me-service"), emptyList()).toList();
+        assertServiceNames(services).containsExactly("ups-find-me1", "ups-find-me2", "ups-other", "managed-find-me1",
+                                                     "managed-find-me2", "managed-other");
     }
 
     @Test
-    public void filtersBySingleTag() {
-        List<CfService> services =
-                DEFAULT_ADAPTER.stream(emptyList(), Collections.singletonList("Find Me!")).collect(toList());
-        assertThat(services).extracting(CfService::getName)
-                            .containsExactly("managed-find-me1", "managed-find-me2", "managed-other1", "ups-find-me1",
-                                             "ups-find-me2");
+    void filtersBySingleTag() {
+        List<CloudFoundryServiceInstance> services =
+                DEFAULT_ADAPTER.stream(emptyList(), Collections.singletonList("Find Me!")).toList();
+        assertServiceNames(services).containsExactlyInAnyOrder("managed-find-me1", "managed-find-me2", "managed-other1",
+                                                               "ups-find-me1", "ups-find-me2");
     }
 
     @Test
-    public void standardUseCase() {
-        List<CfService> services = DEFAULT_ADAPTER.stream(asList("user-provided", "managed-find-me-service"),
-                                                          Collections.singletonList("Find Me!")).collect(toList());
-        assertThat(services).extracting(CfService::getName)
-                            .containsExactly("ups-find-me1", "ups-find-me2", "managed-find-me1", "managed-find-me2");
+    void standardUseCase() {
+        List<CloudFoundryServiceInstance> services =
+                DEFAULT_ADAPTER.stream(asList("user-provided", "managed-find-me-service"),
+                                       Collections.singletonList("Find Me!")).collect(toList());
+        assertServiceNames(services).containsExactly("ups-find-me1", "ups-find-me2", "managed-find-me1",
+                                                     "managed-find-me2");
     }
 
 }
